# oracle2vortex

./: .gitignore  BATCH_PROCESSING.md  Cargo.toml  IMPLEMENTATION.md  LICENSE  Makefile  README.md  README_LARGE_DATASETS.md
docs/: CONTRIBUTING_TRANSLATIONS.md  DUCKDB_USAGE.md  ORACLE_TYPE_MAPPING.md  TEMPORAL_TYPES.md  TRANSLATIONS.md  TRANSLATION_UPDATE_NOTES.md
docs/locales/: README.bg.md  README.cs.md  README.da.md  README.de.md  README.el.md  README.es.md  README.et.md  README.fi.md  README.fr.md  README.ga.md  README.hi.md  README.hr.md  README.hu.md  README.it.md  README.lt.md  README.lv.md  README.mt.md  README.nl.md  README.pl.md  README.pt.md  README.ro.md  README.sk.md  README.sl.md  README.sv.md  README.txt  README.zh.md
examples/: README.md  README_DUCKDB.md  duckdb_helpers.sql  duckdb_usage_examples.sql  sample_query.sql
src/: cli.rs  csv_stream.rs  json_stream.rs  main.rs  pipeline.rs  sqlcl.rs  vortex_writer.rs
