[package]
name = "oracle2vortex"
version = "0.1.0"
edition = "2021"
authors = ["William Gacquer <oracle2vortex@amilto.com>"]
license = "EUPL-1.2"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"
vortex-array = "0.58"
vortex-dtype = "0.58"
vortex-buffer = "0.58"
vortex-file = "0.58"
vortex-session = "0.58"
vortex-io = { version = "0.58", features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = "0.3"
csv = "1.3"

